List java version fix + default config change